# DeltaForceAgent

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
data/neo4j/: ammo.json  attachments.json  collection.json  equipment.json  firearms.json  map.json  operator.json
data/scripts/: data_pipeline.py
docker/milvus/: docker-compose.yml  test.py
docker/neo4j/: docker-compose.yml  test.py
docs/: PROJECT_STRUCTURE.md
rag_app/: .env.example  config.py  main.py  requirements.txt
rag_app/rag_modules/: __init__.py  generation_integration.py  graph_data_preparation.py  graph_indexing.py  graph_rag_retrieval.py  hybrid_retrieval.py  intelligent_query_router.py  milvus_index_construction.py
scripts/: import_to_neo4j.py  json_to_csv.py  wipe_neo4j.py
src/agents/: __init__.py  graph.py  intent_analyzer.py  runner.py  state.py
src/rag_modules/: __init__.py  generation_integration.py  graph_data_preparation.py  graph_indexing.py  graph_rag_retrieval.py  hybrid_retrieval.py  intelligent_query_router.py  llm_utils.py  milvus_index_construction.py  rag_system.py
src/services/: __init__.py  rag_service.py
src/tools/: __init__.py  rag_knowledge_tool.py  registry.py
